@@ -35,7 +35,7 @@ class tpm2 (
   simplib::assert_metadata( $module_name )
 
   # There is no reason to install TPM2 resources on a host
-  if defined('$facts["tpm_version"]') and $facts['tpm_version' == 'tpm1'] {
+  if $facts['tpm_version'] and $facts['tpm_version'] == 'tpm1' {
     notify { 'tpm2_with_tpm1':
       message => "NOTICE: Host has a tpm1 device; skipping TPM2 resources from module ${module_name}"
     }
